added list options menu and updated getlistfromserver http library